working test suite
